# slide-speaker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  QWEN.md  README.md  TODO.md  TRANSLATION_FIXES.md  cli.py  high-contrast-themes-improvements.md  master_worker.py  mypy.ini  project.code-workspace  pyproject.toml  ruff.toml  server.py  setup-precommit.sh  worker.py
api/: .env.example  Makefile  PODCAST_FILENAME_FIX.md  alembic.ini  cli.py  create_test_pdf.py  debug_scripts.py  main.py  master_worker.py  monitor_task.py  mypy.ini  pyproject.toml  server.py  test.pptx  test.txt  worker.py
api/docs/: API.md  INSTALLATION.md  PIPELINE_OVERVIEW.md  STEP_DEFINITIONS.md
api/migrations/: env.py
api/migrations/versions/: 0002_add_autoincrement_id_to_tasks_table.py  0011_add_user_timestamps.py  (+3 more)
api/scripts/: __init__.py  ss_admin.py  storage_backfill.py
api/slidespeaker/: __init__.py  avatar_service_alt.py  avatar_service_unified.py  image_service.py  locale_utils.py  orchestrator.py  script_generator.py  slide_processor.py  state_manager.py  subtitle_generator.py  task_manager.py  tts_service.py  video_composer.py  video_previewer.py  vision_service.py
api/slidespeaker_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_auth_routes.py  test_background_jobs.py  test_file_purger.py  test_health.py  test_health_routes.py  test_local_storage.py  test_session_manager.py  test_task_queue.py  test_task_repository.py  test_tasks.py  test_upload.py  test_upload_route.py
(+509 files in other folders)
