[project]
name = "slidespeaker-api"
version = "0.1.0"
description = "SlideSpeaker - AI-Powered Presentation System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "fastapi-cors>=0.0.6",
    "aiofiles>=23.2.1",
    "openai>=1.3.5",
    "elevenlabs>=0.2.27",
    "requests>=2.31.0",
    "pypdf2>=3.0.1",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "redis",
    "loguru>=0.7.3",
    "socksio>=1.0.0",
    "reportlab>=4.4.3",
    "imageio>=2.37.0",
    "asyncio>=4.0.0",
    "oss2>=2.19.1",
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "greenlet>=3.2.4",
    "authlib>=1.2.0",
    "httpx>=0.24.0",
    "itsdangerous>=2.1.2",
    "email-validator>=1.3.1",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "alembic>=1.13.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
db = [
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29.0",
]
aws = [
    "boto3>=1.34.0",
]
oss = [
    "oss2>=2.17.0",
]

[tool.mypy]
python_version = "3.12"
exclude = ["tests/", "output/", "uploads/", ".venv/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
